--- a/PasswordExpire/App.config
+++ b/PasswordExpire/App.config
@@ -5,7 +5,7 @@
 
   </startup>
   <appSettings>
-    <add key="apiKey" value="yourapikey" />
-    <add key="login" value="login" />
+    <add key="apiKey" value="yourapikey1" />
+    <add key="login" value="login1" />
   </appSettings>
 </configuration>
