--- a/PasswordExpire/App.config
+++ b/PasswordExpire/App.config
@@ -5,7 +5,7 @@
 
   </startup>
   <appSettings>
-    <add key="apiKey" value="yourapikey" />
-    <add key="login" value="dgfhdhg" />
+    <add key="apiKey" value="your-api-key" />
+    <add key="login" value="your-login" />
   </appSettings>
 </configuration>
