--- a/PasswordExpire/App.config
+++ b/PasswordExpire/App.config
@@ -1,11 +1,24 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <startup>
-    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
-
-  </startup>
+    
+  <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8"/></startup>
   <appSettings>
-    <add key="apiKey" value="your-api-key" />
-    <add key="login" value="your-login" />
+    <add key="apiKey" value="your-api-key"/>
+    <add key="login" value="your-login"/>
+    <add key="smsMessage" value = "Sveiki, iki jūsų paskyros užblokavimo liko 4 dienos. Laikas keisti slaptažodį jau dabar! https://account.activedirectory.windowsazure.com/ChangePassword.aspx"/>
+    <add key="ClientSettingsProvider.ServiceUri" value=""/>
   </appSettings>
+  <system.web>
+    <membership defaultProvider="ClientAuthenticationMembershipProvider">
+      <providers>
+        <add name="ClientAuthenticationMembershipProvider" type="System.Web.ClientServices.Providers.ClientFormsAuthenticationMembershipProvider, System.Web.Extensions, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" serviceUri=""/>
+      </providers>
+    </membership>
+    <roleManager defaultProvider="ClientRoleProvider" enabled="true">
+      <providers>
+        <add name="ClientRoleProvider" type="System.Web.ClientServices.Providers.ClientRoleProvider, System.Web.Extensions, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" serviceUri="" cacheTimeout="86400"/>
+      </providers>
+    </roleManager>
+  </system.web>
 </configuration>
