--- a/PasswordExpire/App.config
+++ b/PasswordExpire/App.config
@@ -7,6 +7,7 @@
     <add key="apiKey" value="your-api-key"/>
     <add key="login" value="your-login"/>
     <add key="smsMessage" value = "Sveiki, iki jūsų paskyros užblokavimo liko 4 dienos. Laikas keisti slaptažodį jau dabar! https://account.activedirectory.windowsazure.com/ChangePassword.aspx"/>
+    <add key="Groups" value="LT_All Users"/>
     <add key="ClientSettingsProvider.ServiceUri" value=""/>
   </appSettings>
   <system.web>
