change asyc methods to regular

--- a/PasswordExpire/PasswordExpire.csproj
+++ b/PasswordExpire/PasswordExpire.csproj
@@ -85,7 +85,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="src\Entity\User.cs" />
-    <Compile Include="src\Services\AdUserService.cs" />
+    <Compile Include="src\Services\AdService.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
